syntax = "proto3";

package attendace_tracker.web_service.protos;

service AttendeeService {
  rpc RegisterAttendee (RegisterAttendeeRequest) returns (RegisteredAttendee);
}

message RegisterAttendeeRequest {
  string name = 1;
  string last_name = 2;
}

message RegisteredAttendee {
  string name = 1;
  string last_name = 2;
  string id = 3;
}